--- a/papers/Sakamoto2027/main.tex
+++ b/papers/Sakamoto2027/main.tex
@@ -34,7 +34,7 @@ The 2025 catastrophe marked a turning point in human history, as the sudden appe
 
 The economic significance of dungeon raiding lies in the unique resources and materials found within these environments, which range from rare minerals and magical artifacts to exotic flora and fauna \citep{adesina2027harnessing}. These resources have found applications across various industries, from construction and energy to pharmaceuticals and advanced manufacturing, leading to the rise of a new resource-based economy \citep{sakamoto2026emergence}. However, the high risks associated with dungeon exploration, including the presence of dangerous creatures and environmental hazards, have posed significant challenges for resource extraction and allocation.
 
-In response to these challenges, hunter guilds have emerged as key organizational structures for coordinating dungeon raiding activities and mitigating risks \citep{kim2027emergence}. These guilds, which vary in size, specialization, and governance structures, provide a framework for pooling resources, sharing information, and distributing rewards among their members. The formation of hunter guilds has also given rise to new power dynamics and social hierarchies, as guild leaders and elite hunters wield significant influence over resource allocation and decision-making processes \citep{nakamura2027rise}.
+In response to these challenges, hunter guilds have emerged as key organizational structures for coordinating dungeon raiding activities and mitigating risks \citep{kim2027emergence}. These guilds, which vary in size, specialization, and governance structures, provide a framework for pooling resources, sharing information, and distributing rewards among their members. The formation of hunter guilds has also given rise to new power dynamics and social hierarchies, as guild leaders and elite hunters wield significant influence over resource allocation and decision-making processes.
 
 Despite the growing economic importance of dungeon raiding, there has been limited research on the underlying economic dynamics and organizational structures that shape this emerging industry. This paper aims to fill this gap by developing a theoretical model of resource allocation and risk-reward trade-offs in dungeon raiding, taking into account the unique abilities of hunter-awakened individuals and the role of hunter guilds in coordinating raiding activities. We then empirically test the model's predictions using data from Japanese hunter guilds, providing novel insights into the efficiency and equity of the dungeon economy.
 
